--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,7 @@ body {
 
 [class*="col-"] {
   padding: 15px;
+  box-sizing: border-box; /* เพิ่ม line 12 เพื่อให้ padding ไม่เพิ่มขนาดของ element */
 }
 
 .header {
@@ -42,8 +43,8 @@ body {
 }
 
 .menu li a {
-  text-decoration: #3C3C3C;
-  color: #ffffff; /* สีข้อความลิงก์เมื่อไม่ hover */
+  text-decoration: none; /* เปลี่ยนจาก #3C3C3C เป็น none เนื่องจาก text-decoration ต้องใส่ค่าเป็น none หรือ underline */
+  color: #ffffff;
 }
 
 .aside {
@@ -65,11 +66,6 @@ body {
   border-radius: 10px;
 }
 
-/* For mobile phones: */
-[class*="col-"] {
-  width: 100%;
-}
-
 .row {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
@@ -81,33 +77,31 @@ body {
 }
 
 @media only screen and (min-width: 600px) {
-  /* For tablets: */
-  .col-s-1 {width: 8.33%;}
-  .col-s-2 {width: 16.66%;}
-  .col-s-3 {width: 25%;}
-  .col-s-4 {width: 33.33%;}
-  .col-s-5 {width: 41.66%;}
-  .col-s-6 {width: 50%;}
-  .col-s-7 {width: 58.33%;}
-  .col-s-8 {width: 66.66%;}
-  .col-s-9 {width: 75%;}
-  .col-s-10 {width: 83.33%;}
-  .col-s-11 {width: 91.66%;}
-  .col-s-12 {width: 100%;}
+  .col-s-1 {grid-column: span 1;}
+  .col-s-2 {grid-column: span 2;}
+  .col-s-3 {grid-column: span 1;}
+  .col-s-4 {grid-column: span 4;}
+  .col-s-5 {grid-column: span 5;}
+  .col-s-6 {grid-column: span 6;}
+  .col-s-7 {grid-column: span 7;}
+  .col-s-8 {grid-column: span 8;}
+  .col-s-9 {grid-column: span 6;}
+  .col-s-10 {grid-column: span 10;}
+  .col-s-11 {grid-column: span 11;}
+  .col-s-12 {grid-column: span 12;}
 }
 
-@media only screen and (min-width: 768px) {
-  /* For desktop: */
-  .col-1 {width: 8.33%;}
-  .col-2 {width: 16.66%;}
-  .col-3 {width: 25%;}
-  .col-4 {width: 33.33%;}
-  .col-5 {width: 41.66%;}
-  .col-6 {width: 50%;}
-  .col-7 {width: 58.33%;}
-  .col-8 {width: 66.66%;}
-  .col-9 {width: 75%;}
-  .col-10 {width: 83.33%;}
-  .col-11 {width: 91.66%;}
-  .col-12 {width: 100%;}
+@media only screen and (min-width: 700px) {
+  .col-1 {grid-column: span 1;}
+  .col-2 {grid-column: span 2;}
+  .col-3 {grid-column: span 1;}
+  .col-4 {grid-column: span 4;}
+  .col-5 {grid-column: span 5;}
+  .col-6 {grid-column: span 2;}
+  .col-7 {grid-column: span 7;}
+  .col-8 {grid-column: span 8;}
+  .col-9 {grid-column: span 9;}
+  .col-10 {grid-column: span 10;}
+  .col-11 {grid-column: span 11;}
+  .col-12 {grid-column: span 12;}
 }
