--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@ body {
 
 [class*="col-"] {
   padding: 15px;
-  box-sizing: border-box; /* เพิ่ม line 12 เพื่อให้ padding ไม่เพิ่มขนาดของ element */
+  box-sizing: border-box;
 }
 
 .header {
@@ -34,7 +34,7 @@ body {
   margin-bottom: 7px;
   background-color: #d5aabe;
   color: #ffffff;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   border-radius: 10px;
 }
 
@@ -43,7 +43,7 @@ body {
 }
 
 .menu li a {
-  text-decoration: none; /* เปลี่ยนจาก #3C3C3C เป็น none เนื่องจาก text-decoration ต้องใส่ค่าเป็น none หรือ underline */
+  text-decoration: none;
   color: #ffffff;
 }
 
@@ -53,7 +53,7 @@ body {
   color: #ffffff;
   text-align: center;
   font-size: 14px;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   border-radius: 10px;
 }
 
@@ -72,30 +72,34 @@ body {
   grid-gap: 20px;
 }
 
+.col-6 {
+  grid-column: span 2;
+}
 
+[class*="col-s-"] {
+  width: 100%;
+}
 
 @media only screen and (min-width: 600px) {
   .col-s-1 {grid-column: span 1;}
   .col-s-2 {grid-column: span 2;}
-  .col-s-3 {grid-column: span 1;}
+  .col-s-3 {grid-column: span 3;}
   .col-s-4 {grid-column: span 4;}
   .col-s-5 {grid-column: span 5;}
   .col-s-6 {grid-column: span 6;}
   .col-s-7 {grid-column: span 7;}
   .col-s-8 {grid-column: span 8;}
-  .col-s-9 {grid-column: span 6;}
+  .col-s-9 {grid-column: span 9;}
   .col-s-10 {grid-column: span 10;}
   .col-s-11 {grid-column: span 11;}
   .col-s-12 {grid-column: span 12;}
-}
 
-@media only screen and (min-width: 600px) {
   .col-1 {grid-column: span 1;}
   .col-2 {grid-column: span 2;}
-  .col-3 {grid-column: span 1;}
+  .col-3 {grid-column: span 3;}
   .col-4 {grid-column: span 4;}
   .col-5 {grid-column: span 5;}
-  .col-6 {grid-column: span 2;}
+  .col-6 {grid-column: span 6;}
   .col-7 {grid-column: span 7;}
   .col-8 {grid-column: span 8;}
   .col-9 {grid-column: span 9;}
