--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,5 @@
-body {
+* {
   box-sizing: border-box;
-  font-family: "Lucida Sans", sans-serif;
-  background-color: #f5f5f5;
 }
 
 .row::after {
@@ -11,8 +9,16 @@ body {
 }
 
 [class*="col-"] {
+  float: left;
   padding: 15px;
-  box-sizing: border-box;
+}
+
+html {
+  font-family: "Lucida Sans", sans-serif;
+}
+
+ body {
+  background-color: #f5f5f5;
 }
 
 .header {
@@ -21,6 +27,7 @@ body {
   padding: 15px;
   border-radius: 10px;
 }
+
 
 .menu ul {
   list-style-type: none;
@@ -34,18 +41,19 @@ body {
   margin-bottom: 7px;
   background-color: #d5aabe;
   color: #ffffff;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   border-radius: 10px;
 }
 
 .menu li:hover {
   background-color: #c1839f;
 }
-
 .menu li a {
-  text-decoration: none;
-  color: #ffffff;
+  text-decoration: #3C3C3C;
+  color: #ffffff; /* สีข้อความลิงก์เมื่อไม่ hover */
+
 }
+
 
 .aside {
   background-color: #d5aabe;
@@ -53,11 +61,12 @@ body {
   color: #ffffff;
   text-align: center;
   font-size: 14px;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   border-radius: 10px;
 }
 
 .footer {
+  
   background-color: #d5aabe;
   color: #ffffff;
   text-align: center;
@@ -66,44 +75,38 @@ body {
   border-radius: 10px;
 }
 
-.row {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  grid-gap: 20px;
-}
-
-.col-6 {
-  grid-column: span 2;
-}
-
-[class*="col-s-"] {
+/* For mobile phones: */
+[class*="col-"] {
   width: 100%;
 }
 
 @media only screen and (min-width: 600px) {
-  .col-s-1 {grid-column: span 1;}
-  .col-s-2 {grid-column: span 2;}
-  .col-s-3 {grid-column: span 3;}
-  .col-s-4 {grid-column: span 4;}
-  .col-s-5 {grid-column: span 5;}
-  .col-s-6 {grid-column: span 6;}
-  .col-s-7 {grid-column: span 7;}
-  .col-s-8 {grid-column: span 8;}
-  .col-s-9 {grid-column: span 9;}
-  .col-s-10 {grid-column: span 10;}
-  .col-s-11 {grid-column: span 11;}
-  .col-s-12 {grid-column: span 12;}
-
-  .col-1 {grid-column: span 1;}
-  .col-2 {grid-column: span 2;}
-  .col-3 {grid-column: span 3;}
-  .col-4 {grid-column: span 4;}
-  .col-5 {grid-column: span 5;}
-  .col-6 {grid-column: span 6;}
-  .col-7 {grid-column: span 7;}
-  .col-8 {grid-column: span 8;}
-  .col-9 {grid-column: span 9;}
-  .col-10 {grid-column: span 10;}
-  .col-11 {grid-column: span 11;}
-  .col-12 {grid-column: span 12;}
+  /* For tablets: */
+  .col-s-1 {width: 8.33%;}
+  .col-s-2 {width: 16.66%;}
+  .col-s-3 {width: 25%;}
+  .col-s-4 {width: 33.33%;}
+  .col-s-5 {width: 41.66%;}
+  .col-s-6 {width: 50%;}
+  .col-s-7 {width: 58.33%;}
+  .col-s-8 {width: 66.66%;}
+  .col-s-9 {width: 75%;}
+  .col-s-10 {width: 83.33%;}
+  .col-s-11 {width: 91.66%;}
+  .col-s-12 {width: 100%;}
+}
+@media only screen and (min-width: 768px) {
+  /* For desktop: */
+  .col-1 {width: 8.33%;}
+  .col-2 {width: 16.66%;}
+  .col-3 {width: 25%;}
+  .col-4 {width: 33.33%;}
+  .col-5 {width: 41.66%;}
+  .col-6 {width: 50%;}
+  .col-7 {width: 58.33%;}
+  .col-8 {width: 66.66%;}
+  .col-9 {width: 75%;}
+  .col-10 {width: 83.33%;}
+  .col-11 {width: 91.66%;}
+  .col-12 {width: 100%;}
 }
