--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,14 @@
 * {
   box-sizing: border-box;
+  font-family: "Lucida Sans", sans-serif;
+}
+
+.row {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 10px;
+  justify-items: center;
+  margin-top: 2%;
 }
 
 .row::after {
@@ -13,21 +22,19 @@
   padding: 15px;
 }
 
-html {
-  font-family: "Lucida Sans", sans-serif;
-}
-
- body {
-  background-color: #f5f5f5;
-}
-
 .header {
+  display: grid;
   background-color: #d5aabe;
   color: #ffffff;
   padding: 15px;
   border-radius: 10px;
 }
 
+.menu{
+  display: grid;
+  grid-template-rows: repeat(1, 1fr);
+  gap: 5px;
+}
 
 .menu ul {
   list-style-type: none;
@@ -41,7 +48,7 @@ html {
   margin-bottom: 7px;
   background-color: #d5aabe;
   color: #ffffff;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   border-radius: 10px;
 }
 
@@ -49,11 +56,9 @@ html {
   background-color: #c1839f;
 }
 .menu li a {
-  text-decoration: #3C3C3C;
-  color: #ffffff; /* สีข้อความลิงก์เมื่อไม่ hover */
-
+  text-decoration: none;
+  color: #ffffff;
 }
-
 
 .aside {
   background-color: #d5aabe;
@@ -61,12 +66,11 @@ html {
   color: #ffffff;
   text-align: center;
   font-size: 14px;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   border-radius: 10px;
 }
 
 .footer {
-  
   background-color: #d5aabe;
   color: #ffffff;
   text-align: center;
@@ -80,33 +84,52 @@ html {
   width: 100%;
 }
 
+
 @media only screen and (min-width: 600px) {
   /* For tablets: */
-  .col-s-1 {width: 8.33%;}
-  .col-s-2 {width: 16.66%;}
-  .col-s-3 {width: 25%;}
-  .col-s-4 {width: 33.33%;}
-  .col-s-5 {width: 41.66%;}
-  .col-s-6 {width: 50%;}
-  .col-s-7 {width: 58.33%;}
-  .col-s-8 {width: 66.66%;}
-  .col-s-9 {width: 75%;}
-  .col-s-10 {width: 83.33%;}
-  .col-s-11 {width: 91.66%;}
-  .col-s-12 {width: 100%;}
+  .navbar ul {
+    grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+  }
+
+  .row {
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  }
+
+.menu {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  padding: 1%;
+  margin-bottom: 10px;
+  gap: 10px;
+}
+
+.line {
+  text-align: center;
+}
+  
 }
 @media only screen and (min-width: 768px) {
   /* For desktop: */
-  .col-1 {width: 8.33%;}
-  .col-2 {width: 16.66%;}
-  .col-3 {width: 25%;}
-  .col-4 {width: 33.33%;}
-  .col-5 {width: 41.66%;}
-  .col-6 {width: 50%;}
-  .col-7 {width: 58.33%;}
-  .col-8 {width: 66.66%;}
-  .col-9 {width: 75%;}
-  .col-10 {width: 83.33%;}
-  .col-11 {width: 91.66%;}
-  .col-12 {width: 100%;}
+  .navbar ul {
+    grid-template-columns: repeat(auto-fit, minmax(120px, 3fr));
+ 
+  }
+
+  .row {
+    grid-template-columns: repeat(3, minmax(250px, 1fr));
+  }
+
+
+
+.menu {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  padding: 1%;
+  margin-bottom: 10px;
+  gap: 10px;
+}
+
+.line {
+  text-align: center;
+}
 }
